2005-09-26  Derek Price  <derek@ximbiot.com>

	* Makefile.am (EXTRA_DIST): Restore PDFs.
	* cvs-paper.ps: Removed.
	* texinfo.tex: Update from GNULIB.

2005-09-25  Derek Price  <derek@ximbiot.com>

	* Makefile.am (doc): Finish removing PSs.

	* Makefile.am (EXTRA_DIST): Remove PDFs too until errors go away.

	* Makefile.am (EXTRA_DIST): Dist PDFs rather than PSs.

2005-09-22  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (rdiff options): Document -k.
	* cvs.1, stamp-vti, version.texi: Regenerated.

2005-09-20  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo: Move summary and detail contents to the front
	where they belong.

2005-09-14  Derek Price  <derek@ximbiot.com>

	* Makefile.am: s#cvs.1#$(srcdir)/cvs.1#.

2005-09-11  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (Common options): Note that -r branch for a revision
	means the head of the branch.

2005-09-10  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (Error messages): Add suggested messages.

2005-09-09  Larry Jones  <lawrence.jones@ugs.com>

	* cvs.texinfo (Error messages): Add signal 11 message.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* cvs.man.footer: Update links.

2005-09-01  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo: Update links and email addresses.

2005-08-29  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (From scratch): Add checkout to import example, from
	wiki.

2005-08-29  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (Removing directories): Correct grammar, from wiki.

2005-08-29  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (From scratch): Clarify note on `cvs add', inspired from
	wiki.

2005-08-22  Derek Price  <derek@ximbiot.com>

	Address bug #13882, submitted by Fred Maranhao.
	* cvs.texinfo (log options, admin options, Invoking CVS): Add cross
	references for clarity about possible states.

2005-08-22  Derek Price  <derek@ximbiot.com>

	* cvs.texinfo (Updating a file): Add note about update -d, inspired by
	wiki.
